--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<h2> Easy Exam --- header</h2>
-
-
+<app-navigation></app-navigation>
 
 <router-outlet></router-outlet>
-
-
-<h2> Easy Exam --- footer</h2>
