--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -19,7 +19,24 @@
   font-weight: 100;
 }
 
-.glyphicon-question-sign {
-  padding-top: 30px;
+.botao-ajuda {
+  padding-top: 20px;
   font-size: 50px;
+}
+
+.mat-sidenav-container {
+  height: 100%;
+}
+
+.infos-medico {
+border-bottom: 1px solid black;
+
+}
+
+.lista-opcoes {
+  padding-top: 40px;
+}
+
+.botao-lista:hover{
+    background-color:#d8d7d7;
 }
