--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
-<h1>Hi {{currentUser.firstName}}!</h1>
-<p>Easy exam!</p>
-<h3>All registered users:</h3>
-<ul>
-  <li *ngFor="let user of users">
-    {{user.username}} ({{user.firstName}} {{user.lastName}})
-    - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
-  </li>
-</ul>
+<!--<h1>Hi {{currentUser.firstName}}!</h1>-->
+<!--<p>Easy exam!</p>-->
+<!--<h3>All registered users:</h3>-->
+<!--<ul>-->
+<!--  <li *ngFor="let user of users">-->
+<!--    {{user.username}} ({{user.firstName}} {{user.lastName}})-->
+<!--    - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>-->
+<!--  </li>-->
+<!--</ul>-->
+<app-navigation></app-navigation>
