--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,4 +7,4 @@
 <!--    - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>-->
 <!--  </li>-->
 <!--</ul>-->
-<app-navigation></app-navigation>
+<app-navigation [currentUserName]="currentUser.firstName"></app-navigation>
