--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <!--<p-progressSpinner></p-progressSpinner>-->
 <!-- nav -->
-<!-- <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
-  <div class="navbar-nav">
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
+ <!-- <div class="navbar-nav">
     <a class="nav-item nav-link" routerLink="/">Home</a>
     <a class="nav-item nav-link" (click)="logout()">Logout</a>
-  </div>
-</nav> -->
+  </div>-->
+</nav>
 
 <!-- main app container -->
-<!-- <div class="jumbotron">
+<div class="jumbotron">
   <div class="container">
     <div class="row">
       <div class="col-sm-6 offset-sm-3">
@@ -17,6 +17,7 @@
       </div>
     </div>
   </div>
-</div> -->
-<app-navigation></app-navigation>
+</div>
+<app-navigation *ngIf="currentUser" [currentUserName]="currentUser.firstName"></app-navigation>
+<!--<app-login *ngIf="!currentUser "></app-login>-->
 
