--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,6 @@
     </div>
   </div>
 </div>
-<app-navigation *ngIf="currentUser" [currentUserName]="currentUser.firstName"></app-navigation>
+<app-navigation *ngIf="currentUser" [currentUser]="currentUser"></app-navigation>
 <!--<app-login *ngIf="!currentUser "></app-login>-->
 
