--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -15,3 +15,14 @@
     stroke: #ffa700;
   }
 }
+
+.content {
+  margin-top: 50px;
+  text-align: center;
+}
+
+mat-card {
+  margin: auto;
+  max-width: 300px;
+  height: 300px;
+}
