corrigindo rota da config

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -44,7 +44,7 @@
                 <mat-icon matListIcon>assessment</mat-icon>
                 <span>Análises</span>
             </button>
-            <button mat-list-item class="botao-lista" (click)="update()">
+            <button mat-list-item class="botao-lista" (click)="config()">
                 <mat-icon matListIcon>settings_applications</mat-icon>
                 <span>Configurações</span>
             </button>
