--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,27 +1,19 @@
 <h2>Register</h2>
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <label>First Name</label>
-    <input type="text" formControlName="firstName" class="form-control"
-           [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/>
-    <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-      <div *ngIf="f.firstName.errors.required">First Name is required</div>
+    <label>Name</label>
+    <input type="text" formControlName="name" class="form-control"
+           [ngClass]="{ 'is-invalid': submitted && f.name.errors }"/>
+    <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+      <div *ngIf="f.name.errors.required">Name is required</div>
     </div>
   </div>
   <div class="form-group">
-    <label>Last Name</label>
-    <input type="text" formControlName="lastName" class="form-control"
-           [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"/>
-    <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-      <div *ngIf="f.lastName.errors.required">Last Name is required</div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label>Username</label>
+    <label>E-mail</label>
     <input type="text" formControlName="username" class="form-control"
            [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-      <div *ngIf="f.username.errors.required">Username is required</div>
+      <div *ngIf="f.username.errors.required">E-mail is required</div>
     </div>
   </div>
   <div class="form-group">
@@ -31,6 +23,17 @@
     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
       <div *ngIf="f.password.errors.required">Password is required</div>
       <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label>CRM</label>
+    <input type="text" formControlName="crm" class="form-control"
+           [ngClass]="{ 'is-invalid': submitted && f.crm.errors }"/>
+    <div *ngIf="submitted && f.crm.errors" class="invalid-feedback">
+      <div *ngIf="f.crm.errors.required">Seu CRM é obrigatório.</div>
+      <div *ngIf="f.crm.errors.minlength">Seu CRM deve conter 7 números</div>
+      <div *ngIf="f.crm.errors.maxlength">Seu CRM deve conter 7 números</div>
+      <div *ngIf="f.crm.errors.pattern">Seu CRM deve ser numérico.</div>
     </div>
   </div>
   <div class="form-group">
