atributos de usuario

--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,19 +1,43 @@
 <h2>Settings</h2>
 <form [formGroup]="configForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <label>First Name</label>
-    <input type="text" formControlName="firstName" class="form-control"
-           [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/>
-    <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-      <div *ngIf="f.firstName.errors.required">First Name is required</div>
+    <label>Nome</label>
+    <input type="text" formControlName="name" class="form-control"
+           [ngClass]="{ 'is-invalid': submitted && f.name.errors }"/>
+    <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+      <div *ngIf="f.name.errors.required">Name is required</div>
     </div>
   </div>
   <div class="form-group">
-    <label>Last Name</label>
-    <input type="text" formControlName="lastName" class="form-control"
-           [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"/>
-    <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-      <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+    <label>E-mail</label>
+    <input type="text" formControlName="username" class="form-control"
+           [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
+    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+      <!-- <div *ngIf="f.username.errors.required">Last Name is required</div> -->
+    </div>
+  </div>
+  <div class="form-group">
+    <label>Senha</label>
+    <input type="password" formControlName="password" class="form-control"
+           [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+      <div *ngIf="f.password.errors.required">Password is required</div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label>CRM</label>
+    <input type="text" formControlName="crm" class="form-control"
+           [ngClass]="{ 'is-invalid': submitted && f.crm.errors }"/>
+    <div *ngIf="submitted && f.crm.errors" class="invalid-feedback">
+      <!-- <div *ngIf="f.crm.errors.required">Last Name is required</div> -->
+    </div>
+  </div>
+  <div class="form-group">
+    <label>Atuação</label>
+    <input type="text" formControlName="doctorType" class="form-control"
+           [ngClass]="{ 'is-invalid': submitted && f.doctorType.errors }"/>
+    <div *ngIf="submitted && f.doctorType.errors" class="invalid-feedback">
+      <!-- <div *ngIf="f.doctorType.errors.required">Last Name is required</div> -->
     </div>
   </div>
   <div class="form-group">
