--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,10 +4,10 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <h2>Login</h2>
       <div class="form-group">
-        <label for="username">Username</label>
+        <label for="username">E-mail</label>
         <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
         <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-          <div *ngIf="f.username.errors.required">Username is required</div>
+          <div *ngIf="f.username.errors.required">E-mail is required</div>
         </div>
       </div>
       <div class="form-group">
