Adicionando tabela de pacientes

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -24,7 +24,7 @@
                 <mat-icon matListIcon>home</mat-icon>
                 <span>Home</span>
             </button>
-            <button mat-list-item class="botao-lista">
+            <button mat-list-item class="botao-lista" routerLink="/patient">
                 <mat-icon matListIcon>account_box</mat-icon>
                 <span>Pacientes</span>
             </button>
