--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,3 @@
-
 @keyframes ui-progress-spinner-color {
   100%,
   0% {
@@ -25,4 +24,9 @@ mat-card {
   margin: auto;
   max-width: 300px;
   height: 300px;
+}
+
+.erros {
+  margin-bottom: 15px;
+  color: red;
 }
