--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,3 +8,36 @@
 <!--  </li>-->
 <!--</ul>-->
 <!-- <app-navigation [currentUserName]="currentUser.firstName"></app-navigation> -->
+
+
+<h2>Últimas atualizações</h2>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="activity">
+    <th mat-header-cell *matHeaderCellDef> Atividade </th>
+    <td mat-cell *matCellDef="let element"> {{element.activity}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="info">
+    <th mat-header-cell *matHeaderCellDef> Informações </th>
+    <td mat-cell *matCellDef="let element"> {{element.info}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="updated_by">
+    <th mat-header-cell *matHeaderCellDef> Atualizado por </th>
+    <td mat-cell *matCellDef="let element"> {{element.updated_by}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="doctorType">
+    <th mat-header-cell *matHeaderCellDef> Cargo </th>
+    <td mat-cell *matCellDef="let element"> {{element.doctorType}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="updated_at">
+    <th mat-header-cell *matHeaderCellDef> Atualizado em </th>
+    <td mat-cell *matCellDef="let element"> {{element.updated_at}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
