--- a/src/app/patient/patient-list/patient-list.component.scss
+++ b/src/app/patient/patient-list/patient-list.component.scss
@@ -1,3 +1,11 @@
+.pacient-header{
+  display: flex;
+  justify-content: space-between;
+}
+.pacient-header button{
+  height: 50px;
+}
+
 table { 
   width: 100%;
 }
