--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 <!--</ul>-->
 <!-- <app-navigation [currentUserName]="currentUser.firstName"></app-navigation> -->
 
-
+<!-- 
 <h2>Últimas atualizações</h2>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -40,4 +40,4 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+</table> -->
