--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--<p-progressSpinner></p-progressSpinner>-->
 <!-- nav -->
-<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
+<nav class="navbar navbar-expand navbar-dark bg-dark" style="background-color: #3f51b5" *ngIf="currentUser">
  <!-- <div class="navbar-nav">
     <a class="nav-item nav-link" routerLink="/">Home</a>
     <a class="nav-item nav-link" (click)="logout()">Logout</a>
@@ -8,7 +8,7 @@
 </nav>
 
 <!-- main app container -->
-<div class="jumbotron">
+<div class="jumbotron" style="background-color: #3f51b5">
   <div class="container">
     <div class="row">
       <div class="col-sm-6 offset-sm-3">
