--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="content">
   <mat-card>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <h2>Login</h2>
+      <h2>EasyExam</h2>
       <div class="form-group">
         <div class="row">
-          <label for="username">Username</label>
+          <label for="username">E-mail</label>
         </div>
         <input
           type="text"
@@ -16,12 +16,12 @@
           *ngIf="submitted && f.username.errors"
           class="invalid-feedback  erros"
         >
-          <div *ngIf="f.username.errors.required">Username is required</div>
+          <div *ngIf="f.username.errors.required">Digite seu e-mail.</div>
         </div>
       </div>
       <div class="form-group">
         <div class="row">
-          <label for="password">Password</label>
+          <label for="password">Senha</label>
         </div>
         <input
           type="password"
@@ -33,7 +33,7 @@
           *ngIf="submitted && f.password.errors"
           class="invalid-feedback erros"
         >
-          <div *ngIf="f.password.errors.required">Password is required</div>
+          <div *ngIf="f.password.errors.required">Escolha uma senha.</div>
         </div>
       </div>
       <div class="form-group">
@@ -53,7 +53,7 @@
         />
         <br /><br /><br />
         <a routerLink="/register">
-          <button class="mat-raised-button" color="primary">Register</button>
+          <button class="mat-raised-button" color="primary">Se cadastre!</button>
         </a>
       </div>
     </form>
