--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -16,14 +16,16 @@
 }
 
 .content {
-  margin-top: 50px;
+  margin-top: 100px;
   text-align: center;
 }
 
 mat-card {
+  color: #3f51b5;
   margin: auto;
-  max-width: 300px;
-  height: 300px;
+  max-width: 500px;
+  height: 400px;
+  border-radius: 19px;
 }
 
 .erros {
