--- a/src/app/patient/patient-list/patient-list.component.html
+++ b/src/app/patient/patient-list/patient-list.component.html
@@ -1,5 +1,7 @@
 
-<button mat-raised-button color="accent" routerLink="/patient/new">Novo</button>
+<button mat-raised-button color="accent" routerLink="/patient/new" >
+  <mat-icon>add</mat-icon> Novo
+</button>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="name">
