--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -23,8 +23,10 @@
 
 mat-card {
   margin: auto;
-  max-width: 300px;
+  max-width: 400px;
   height: 600px;
+  color:#3f51b5;
+  border-radius: 19px;
 }
 
 .erros {
