save button disabled if form is not valid

--- a/src/app/patient/patient-form/patient-form.component.html
+++ b/src/app/patient/patient-form/patient-form.component.html
@@ -43,6 +43,6 @@
   </div>
   
   <div>
-    <button type="submit" mat-raised-button color="accent">Salvar</button>
+    <button [disabled]="!this.newPatientForm.valid" type="submit" mat-raised-button color="accent">Salvar</button>
   </div>
 </form>
